# School_test_bot

./: .env.example  Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
school_test_bot/: bot.py  config.py  fsmstatus.py  keyboards.py
school_test_bot/all_handlers/: in_test_log.py  in_test_rus.py  out_test.py
school_test_bot/lexicon/: lexicon.py
testing_bot/: bot.py  config.py  fsmstatus.py  functions.py  keyboards.py
testing_bot/all_handlers/: in_test_log.py  in_test_rus.py  out_test.py
testing_bot/lexicon/: lexicon.py
