[tool.poetry]
name = "testing-bot"
version = "0.1.0"
description = ""
authors = ["NastyVolkova <vera18alisa20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0b7"
environs = "^9.5.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
